# vision-of-movement

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
config/: parameters.yml
inc/: BirdsEyeTranslationReader.hpp  Catcher.hpp  CommandlineParameters.hpp  ConvenienceFunctions.hpp  CvTypesIo.hpp  DrawingFunctions.hpp  ErrorCodes.hpp  FeatureExtractor.hpp  FeatureFilter.hpp  FeatureTracker.hpp  ImageEdgeFilter.hpp  LucasCandaePyramidTracker.hpp  LucasKanadePyramidTracker.hpp  MovementReader.hpp  PreparationFunctions.hpp  RotationReader.hpp  ShiThomasFeatureExtractor.hpp  ShiThomasiFeatureExtractor.hpp  SmoothFilter.hpp  TangentRotationReader.hpp  TranslationReader.hpp  TrimHistoryFilter.hpp  VisualOdometer.hpp
src/: BirdsEyeTranslationReader.cpp  Catcher.cpp  CommandlineParameters.cpp  ConvenienceFunctions.cpp  CvTypesIo.cpp  DrawingFunctions.cpp  FeatureExtractor.cpp  FeatureFilter.cpp  FeatureTracker.cpp  ImageEdgeFilter.cpp  LucasCandaePyramidTracker.cpp  LucasKanadePyramidTracker.cpp  MovementReader.cpp  OdometerMain.cpp  PreparationFunctions.cpp  RotationReader.cpp  ShiThomasFeatureExtractor.cpp  ShiThomasiFeatureExtractor.cpp  SmoothFilter.cpp  TangentRotationReader.cpp  TranslationReader.cpp  TrimHistoryFilter.cpp  VisualOdometer.cpp  calibration.cpp  serialPortTest.cpp  visualOdometry.cpp
